@@ -1,5 +1,5 @@
 /*
- * $Id: store_digest.c,v 1.28 1998/09/19 17:06:13 wessels Exp $
+ * $Id: store_digest.c,v 1.29 1998/10/17 04:34:12 rousskov Exp $
  *
  * DEBUG: section 71    Store Digest Manager
  * AUTHOR: Alex Rousskov
@@ -189,13 +189,11 @@ storeDigestAdd(const StoreEntry * entry)
 	storeKeyText(entry->key));
     /* only public entries are digested */
     if (!EBIT_TEST(entry->flags, KEY_PRIVATE)) {
-	const time_t refresh = refreshWhen(entry);
-	debug(71, 6) ("storeDigestAdd: entry expires in %d secs\n",
-	    (int) (refresh - squid_curtime));
 	/* if expires too soon, ignore */
-	/* Note: We should use the time of the next rebuild, not cur_time @?@ */
-	if (refresh <= squid_curtime + StoreDigestRebuildPeriod) {
-	    debug(71, 6) ("storeDigestAdd: entry expires too early, ignoring\n");
+	/* Note: We should use the time of the next rebuild, not (cur_time+period) */
+	if (refreshCheckDigest(entry, StoreDigestRebuildPeriod)) {
+	    debug(71, 6) ("storeDigestAdd: entry expires within %d secs, ignoring\n", 
+		StoreDigestRebuildPeriod);
 	} else {
 	    good_entry = 1;
 	}
